Milo: Fix alignment in builder view on wide screens.
Bug:

--- a/milo/frontend/appengine/static/buildbot/css/default.css
+++ b/milo/frontend/appengine/static/buildbot/css/default.css
@@ -24,6 +24,11 @@ footer {
   clear: both;
 }
 
+.clear {
+  clear: both;
+  margin: 0;
+}
+
 .prelude {
   float: left;
 }
